# credit-risk-decision-engine

./: .gitignore  Dockerfile  README.md  deployment.md  docker-compose.yml  model.joblib  pyproject.toml
notebooks/: 01_data_profiling.ipynb  02_modeling_and_evaluation.ipynb
src/project_alpha/: __init__.py  app.py  cleaning.py  features.py  train.py
