[project]
name = "project_alpha"
version = "0.1.0"
description = "FinTech Credit Risk Decision Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "xgboost>=2.1.0",
    "pydantic>=2.9.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0" 
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.0",
    "shap>=0.46.0",
    "pytest>=8.3.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "httpx>=0.27.0",
    "optuna>=4.0.0",
    "numba>=0.60.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_alpha"]